feat: expose endpoint for password change
